# MCProxy

./: .gitignore  Dockerfile  README.md  pyproject.toml
dev/deployment/docker/: docker-compose.yaml  endpoints.json  nginx.conf
dev/scripts/: test_list_tools.py
src/mcp_proxy/: main.py
src/mcp_proxy/logic/builders/: callback_function_builder.py  mcp_function_builder.py
src/mcp_proxy/logic/deserializers/: config_deserializer.py
src/mcp_proxy/logic/utils/: parsing_utils.py
src/mcp_proxy/models/: function_params.py  mcp_endpoints_schema.py
tests/logic/builders/: test_callback_function_builder.py  test_mcp_function_builder.py
tests/logic/deserializers/: test_config_deserializer.py
tests/logic/utils/: test_parsing_utils.py
