[project]
name = "mcp-proxy"
version = "0.1.0"
description = "Service that extends the functionality of an existing REST API with MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "makefun>=1.16.0",
    "mcp[cli]>=1.12.4",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]

[tool.setuptools.packages.find]
where = ["src"]
